--- a/Langchain-Agent.ipynb
+++ b/Langchain-Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMV78ok7y43dcxYpb5FrIiI",
+      "authorship_tag": "ABX9TyO9jtj29aXkBpZLOZRUn1ty",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,19 +35,19 @@
       "metadata": {
         "id": "K_sEe-A1S56l"
       },
-      "execution_count": 37,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "afIkZ1hD4RYB"
       },
       "outputs": [],
       "source": [
-        "#!pip install langchain langchainhub langchain_experimental openai streamlit -q\n",
-        "#!pip install google-search-results wikipedia -q"
+        "!pip install langchain langchainhub langchain_experimental openai streamlit -q\n",
+        "!pip install google-search-results wikipedia -q"
       ]
     },
     {
@@ -66,9 +66,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IWrCvpKaENeu",
-        "outputId": "57b49f4f-4ecc-4816-80a1-d45a2ab76780"
+        "outputId": "f8da8aca-c7ce-469d-c6d9-1f4540a778bf"
       },
-      "execution_count": 39,
+      "execution_count": 3,
       "outputs": [
         {
           "name": "stdout",
@@ -102,7 +102,7 @@
       "metadata": {
         "id": "CEhw8Ye15BgC"
       },
-      "execution_count": 38,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -122,7 +122,7 @@
       "metadata": {
         "id": "NE6D9WvpGL1t"
       },
-      "execution_count": 26,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -175,7 +175,7 @@
       "metadata": {
         "id": "HcePPP4M5HPE"
       },
-      "execution_count": 89,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -190,7 +190,8 @@
     {
       "cell_type": "code",
       "source": [
-        "prompt = \"How many people live in the US?\"\n",
+        "prompt = \"Wie viele Menschen leben in den USA?\"\n",
+        "# prompt = \"How many people live in the US?\"\n",
         "# prompt = \"What is the best selling song in the music store?\"\n",
         "# prompt = \"What is the cheapest album in the music store? Tell me the price.\"\n",
         "# prompt = \"What is the best selling song starting with the letter 'F' in the music store? Tell me title and artist.\"\n",
@@ -202,9 +203,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EA-3_QJj6tWN",
-        "outputId": "66bac396-3864-4c55-dd53-d30553de71db"
+        "outputId": "b916f8a8-094e-4a2f-c239-397012f84fb1"
       },
-      "execution_count": 46,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,13 +223,15 @@
             "The U.S. population almost quadrupled during the 20th century – at a growth rate of about 1.3% a year – from about 76 million in 1900 to 281 million in 2000. It is estimated to have reached the 200 million mark in 1967, and the 300 million mark on October 17, 2006. Foreign-born immigration caused the U.S. population to continue its rapid increase, with the foreign-born population doubling from almost 20 million in 1990 to over 45 million in 2015, representing one-third of the population increase. The U.S. population grew by 1.6 million from 2018 to 2019, with 38% of growth from immigration. Population growth is fastest among minorities as a whole, and according to the Census Bureau's 2020 estimation, 50% of U.S. children under the age of 18 are members of ethnic minority groups. \n",
             "As of 2020, white people numbered 235,411,507 or 71% of the population, including people who identified as white in combination with another race. People who identified as white alone (including Hispanic whites) numbered 204,277,273 or 61.6% of the population and Non-Latino whites made up 57.8% of the country's population.Latino Americans accounted for 51.1% of the total national population growth between 2010 and 2020, increasing from 50.5 million in 2010 to 62.1 million in 2020. The Hispanic or Latino population increased by 23% between 2010 and 2020, an increase of more than 11.6 million. Immigrants and their U.S.-born descendants are expected to provide most of the U.S. population gains in the decades ahead.Asian Americans are the fastest growing racial group in America, with a growth rate of 35%. However, multi-racial Asian Americans are the fastest growing group in the country, with a growth rate of 55%, reflecting the increase of mixed-race marriages in the United States.As of 2022, births to White American mothers remain around 50% of the US total, reflecting a decline of 3% compared to 2021. In the same time period, births to Asian American and Hispanic women increased by 2% and 6%, respectively.The 12 month ending general fertility rate increased from 56.6 to 57.0 in 2022 Q1 compared to 2021 Q4.\n",
             "\n",
-            "Page: Historical racial and ethnic demographics of the United States\n",
-            "Summary: The racial and ethnic demographics of the United States have changed dramatically throughout its history.\n",
+            "\n",
+            "\n",
+            "Page: Demographic history of the United States\n",
+            "Summary: The United States is a country primarily located in North America. Demographics of the United States concern matters of population density, ethnicity, education level, health of the populace, economic status, religious affiliations, and other aspects regarding the population.\n",
             "\n",
             "\n",
             "\n",
             "Page: LGBT demographics of the United States\n",
-            "Summary: The demographics of sexual orientation and gender identity in the United States have been studied in the social sciences in recent decades. A 2022 Gallup poll concluded that 7.1% of adult Americans identified as LGBT. A different survey in 2016, from the Williams Institute, estimated that 0.6% of U.S. adults identify as transgender. As of 2022, estimates for the total percentage of U.S. adults that are transgender or nonbinary range from 0.5% to 1.6%. Additionally, a Pew Research survey from 2022 found that approximately 5% of young adults in the U.S. say their gender is different from their sex assigned at birth.Studies from several nations, including the U.S., conducted at varying time periods, have produced a statistical range of 1.2 to 6.8 percent of the adult population identifying as LGBT. O\u001b[0m\u001b[32;1m\u001b[1;3mAs of July 1, 2022, the estimated resident population of the United States is approximately 333,287,557. This figure includes the 50 states and the District of Columbia but excludes the population of five unincorporated U.S. territories and several minor island possessions. The United States is the third most populous country in the world.\u001b[0m\n",
+            "Summary: The demographics of sexual orientation and gender identity in the United States have been studied in the social sciences in recent decades. A 2022 Gallup poll concluded that 7.1% of adult Americans identified as LGBT. A different survey in 2016, from the Williams Institute, estimated that 0.6% of U.S. adults identify as transgender. As of 2022, estimates for the total percentage of U.S. adults that are transgender or nonbinary range from 0.5% to 1.6%. Additionally, a Pew Research survey from 2022 found that approximately 5% of young adults in the U.S. say their gender is different from their sex assigned at birth.Studies from several nations, includ\u001b[0m\u001b[32;1m\u001b[1;3mDie offizielle geschätzte Bevölkerung der Vereinigten Staaten betrug am 1. Juli 2022 laut dem US Census Bureau 333,287,557. Diese Zahl beinhaltet die 50 Bundesstaaten und den District of Columbia, schließt jedoch die Bevölkerung von fünf nicht inkorporierten US-Territorien (Puerto Rico, Guam, die US-amerikanischen Jungferninseln, Amerikanisch-Samoa und die Nördlichen Marianen) sowie mehrere kleinere Inselbesitzungen aus. Die Vereinigten Staaten sind das drittbevölkerungsreichste Land der Welt.\u001b[0m\n",
             "\n",
             "\u001b[1m> Finished chain.\u001b[0m\n"
           ]
@@ -256,32 +259,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9Zsnvgf6BRaV",
-        "outputId": "6b02ce6c-296d-4393-ba34-cbadc55111f1"
+        "outputId": "5620cf75-0281-4259-9f7c-030b3bef93ef"
       },
-      "execution_count": 77,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "How many people live in the US?\n",
+            "Wie viele Menschen leben in den USA?\n",
             "\n",
-            "As of July 1, 2022, the estimated resident population of the United States is\n",
-            "approximately 333,287,557. This figure includes the 50 states and the District\n",
-            "of Columbia but excludes the population of five unincorporated U.S. territories\n",
-            "and several minor island possessions. The United States is the third most\n",
-            "populous country in the world.\n",
+            "Die offizielle geschätzte Bevölkerung der Vereinigten Staaten betrug am 1. Juli\n",
+            "2022 laut dem US Census Bureau 333,287,557. Diese Zahl beinhaltet die 50\n",
+            "Bundesstaaten und den District of Columbia, schließt jedoch die Bevölkerung von\n",
+            "fünf nicht inkorporierten US-Territorien (Puerto Rico, Guam, die US-\n",
+            "amerikanischen Jungferninseln, Amerikanisch-Samoa und die Nördlichen Marianen)\n",
+            "sowie mehrere kleinere Inselbesitzungen aus. Die Vereinigten Staaten sind das\n",
+            "drittbevölkerungsreichste Land der Welt.\n",
             "\n",
-            "{'role': 'HumanMessage', 'content': 'How is the weather now in Cologne?'}\n",
-            "{'role': 'AIMessage', 'content': 'The current weather in Cologne, Germany is partly cloudy with a temperature of 60 degrees Fahrenheit. The humidity is at 68% and there is a wind speed of 8 mph. The chance of precipitation is 1%.'}\n",
-            "{'role': 'HumanMessage', 'content': 'Please use Celsius as unit for temperature.'}\n",
-            "{'role': 'AIMessage', 'content': 'I apologize for the confusion. The current temperature in Cologne, Germany is approximately 15.5 degrees Celsius. The weather is partly cloudy with a humidity of 68% and wind speed of 8 mph. The chance of precipitation is 1%.'}\n",
-            "{'role': 'HumanMessage', 'content': 'In which federal state is this city?'}\n",
-            "{'role': 'AIMessage', 'content': 'Cologne is located in the German western state of North Rhine-Westphalia (NRW).'}\n",
-            "{'role': 'HumanMessage', 'content': 'What language is spoken there?'}\n",
-            "{'role': 'AIMessage', 'content': 'The official language spoken in Cologne, like the rest of Germany, is German. However, the city has its own dialect known as Kölsch, which is used by some locals in everyday conversation. Additionally, due to its status as a major international city, English is also widely spoken.'}\n",
             "{'role': 'HumanMessage', 'content': 'How many people live in the US?'}\n",
-            "{'role': 'AIMessage', 'content': 'As of July 1, 2022, the estimated resident population of the United States is approximately 333,287,557. This figure includes the 50 states and the District of Columbia but excludes the population of five unincorporated U.S. territories and several minor island possessions. The United States is the third most populous country in the world.'}\n"
+            "{'role': 'AIMessage', 'content': 'The current population of the United States is approximately 331.9 million as of 2021.'}\n",
+            "{'role': 'HumanMessage', 'content': 'Wie viele Menschen leben in den USA?'}\n",
+            "{'role': 'AIMessage', 'content': 'Die offizielle geschätzte Bevölkerung der Vereinigten Staaten betrug am 1. Juli 2022 laut dem US Census Bureau 333,287,557. Diese Zahl beinhaltet die 50 Bundesstaaten und den District of Columbia, schließt jedoch die Bevölkerung von fünf nicht inkorporierten US-Territorien (Puerto Rico, Guam, die US-amerikanischen Jungferninseln, Amerikanisch-Samoa und die Nördlichen Marianen) sowie mehrere kleinere Inselbesitzungen aus. Die Vereinigten Staaten sind das drittbevölkerungsreichste Land der Welt.'}\n"
           ]
         }
       ]
@@ -745,7 +744,7 @@
       "metadata": {
         "id": "AeaEhnYJb-LV"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -759,7 +758,7 @@
       "metadata": {
         "id": "Zs1dGiVGcmtD"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -795,7 +794,7 @@
         "    premium = insured_sum*0.25\n",
         "    return premium\n",
         "\n",
-        "tool = StructuredTool.from_function(calculate_insurance_premium, return_direct=True)\n",
+        "tool = StructuredTool.from_function(calculate_insurance_premium, return_direct=False)\n",
         "\n",
         "agent_executor = initialize_agent(\n",
         "    [tool],\n",
@@ -803,23 +802,24 @@
         "    agent=AgentType.STRUCTURED_CHAT_ZERO_SHOT_REACT_DESCRIPTION,\n",
         "    verbose=True,\n",
         ")\n",
-        "agent_executor.run(\"Give me the premium for an insured sum of 10000000\")"
+        "agent_executor.run(\"Give me the premium for an insured sum of 10000000\")\n",
+        "agent_executor.run(\"Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000, die Branche ist Metallbau\")"
       ],
       "metadata": {
         "id": "dF2g6iTCdM0P",
-        "outputId": "dbc3a9b3-0bf6-4751-fa31-53d5ec9e9900",
+        "outputId": "882e1485-1c83-47e6-d9a2-7fe7452b9b8b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 327
+          "height": 803
         }
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "WARNING:langchain.callbacks.tracers.langchain_v1:Failed to load default session, using empty session: HTTPConnectionPool(host='localhost', port=8000): Max retries exceeded with url: /sessions?name=default (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7bca605c7eb0>: Failed to establish a new connection: [Errno 111] Connection refused'))\n"
+            "WARNING:langchain.callbacks.tracers.langchain_v1:Failed to load default session, using empty session: HTTPConnectionPool(host='localhost', port=8000): Max retries exceeded with url: /sessions?name=default (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7cac2b9067a0>: Failed to establish a new connection: [Errno 111] Connection refused'))\n"
           ]
         },
         {
@@ -835,20 +835,61 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "WARNING:langchain.callbacks.tracers.langchain_v1:Failed to persist run: HTTPConnectionPool(host='localhost', port=8000): Max retries exceeded with url: /chain-runs (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7bca605c5420>: Failed to establish a new connection: [Errno 111] Connection refused'))\n"
+            "WARNING:langchain.callbacks.tracers.langchain_v1:Failed to persist run: HTTPConnectionPool(host='localhost', port=8000): Max retries exceeded with url: /chain-runs (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7cac2b905510>: Failed to establish a new connection: [Errno 111] Connection refused'))\n",
+            "WARNING:langchain.callbacks.tracers.langchain_v1:Failed to load default session, using empty session: HTTPConnectionPool(host='localhost', port=8000): Max retries exceeded with url: /sessions?name=default (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7cac2b906350>: Failed to establish a new connection: [Errno 111] Connection refused'))\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[32;1m\u001b[1;3mThe user has asked for the premium for an insured sum but has not provided the industry. I need to ask for the industry to be able to calculate the premium. \n",
-            "\n",
+            "\u001b[32;1m\u001b[1;3mThe user has not provided the industry for which they want to calculate the insurance premium. I need to ask for this information before I can proceed. \n",
             "Action:\n",
             "```\n",
             "{\n",
             "  \"action\": \"Final Answer\",\n",
             "  \"action_input\": \"Could you please specify the industry for which you want to calculate the insurance premium?\"\n",
+            "}\n",
+            "```\u001b[0m\n",
+            "\n",
+            "\u001b[1m> Finished chain.\u001b[0m\n",
+            "\n",
+            "\n",
+            "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+            "\u001b[32;1m\u001b[1;3mThought: The user is asking to calculate the insurance premium for a sum insured of 10,000,000 in the metal construction industry. I will use the calculate_insurance_premium tool to get this information.\n",
+            "\n",
+            "Action:\n",
+            "```\n",
+            "{\n",
+            "  \"action\": \"calculate_insurance_premium\",\n",
+            "  \"action_input\": {\n",
+            "    \"insured_sum\": 10000000,\n",
+            "    \"industry\": \"Metallbau\"\n",
+            "  }\n",
+            "}\n",
+            "```\u001b[0m\n",
+            "Observation: \u001b[36;1m\u001b[1;3m2500000.0\u001b[0m\n",
+            "Thought:"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:langchain.callbacks.tracers.langchain_v1:Failed to persist run: HTTPConnectionPool(host='localhost', port=8000): Max retries exceeded with url: /chain-runs (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7cac2b905840>: Failed to establish a new connection: [Errno 111] Connection refused'))\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[32;1m\u001b[1;3mThe tool has returned a premium of 2,500,000. I will now provide this information to the user. \n",
+            "\n",
+            "Action:\n",
+            "```\n",
+            "{\n",
+            "  \"action\": \"Final Answer\",\n",
+            "  \"action_input\": \"Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 in der Metallbau-Branche beträgt 2.500.000.\"\n",
             "}\n",
             "```\u001b[0m\n",
             "\n",
@@ -859,14 +900,14 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'Could you please specify the industry for which you want to calculate the insurance premium?'"
+              "'Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 in der Metallbau-Branche beträgt 2.500.000.'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 16
         }
       ]
     }
