--- a/Langchain-Agent.ipynb
+++ b/Langchain-Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQlHYot0Yc4ZtNuMqsw9BW",
+      "authorship_tag": "ABX9TyPRBvw7ak2y1q6YEsrp1Nr3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -502,12 +502,12 @@
         "agent.run(\"it is metal construction industry\")"
       ],
       "metadata": {
-        "id": "lKxJyc-CskpC",
-        "outputId": "18592e81-4e57-48c4-96b8-93bd51bd092d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "lKxJyc-CskpC",
+        "outputId": "18592e81-4e57-48c4-96b8-93bd51bd092d"
       },
       "execution_count": 37,
       "outputs": [
@@ -625,17 +625,15 @@
         "\n",
         "# only for single prompt - no memory !\n",
         "\n",
-        "llm = ChatOpenAI(temperature=0, model='gpt-4-0613')\n",
+        "def calculate_insurance_premium(insured_sum: int, industry: str) -> float:\n",
+        "    \"\"\"Calculate the premium for an insurance based on the maximum insured sum and the industry of the customer.\"\"\"\n",
+        "    premium = insured_sum*0.25\n",
+        "    return premium\n",
         "\n",
-        "from langchain.agents import tool\n",
+        "calc_tool = StructuredTool.from_function(calculate_insurance_premium, return_direct=False)\n",
         "\n",
-        "@tool\n",
-        "def get_word_length(word: str) -> int:\n",
-        "    \"\"\"Returns the length of a word.\"\"\"\n",
-        "    return len(word)\n",
-        "\n",
-        "tools = [get_word_length]\n",
-        "tools_dict = {\"get_word_length\": get_word_length}\n",
+        "tools = [calc_tool]\n",
+        "tools_dict = {\"calculate_insurance_premium\": calc_tool}\n",
         "\n",
         "llm_with_tools = llm.bind(\n",
         "    functions=[format_tool_to_openai_function(t) for t in tools]\n",
@@ -657,7 +655,7 @@
         "intermediate_steps = []\n",
         "while True:\n",
         "    output = agent.invoke({\n",
-        "        \"input\": \"how many letters in the word educa?\",\n",
+        "        \"input\": \"Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000, die Branche ist Metallbau.\",\n",
         "        \"intermediate_steps\": intermediate_steps\n",
         "    })\n",
         "    if isinstance(output, AgentFinish):\n",
@@ -671,23 +669,24 @@
         "        tool = tools_dict[output.tool]\n",
         "        observation = tool.run(output.tool_input)\n",
         "        intermediate_steps.append((output, observation))\n",
+        "\n",
         "print(final_result)"
       ],
       "metadata": {
-        "id": "bDxK3olHt70e",
-        "outputId": "85c85a7d-e10a-463b-b405-1f5aceee1002",
+        "id": "Wq3KyyEI-bYO",
+        "outputId": "e5019897-4d65-4dd2-f8c0-0953a24e4ebd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 60,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "get_word_length {'word': 'educa'}\n",
-            "The word \"educa\" has 5 letters.\n"
+            "calculate_insurance_premium {'insured_sum': 10000000, 'industry': 'Metallbau'}\n",
+            "Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 in der Branche Metallbau beträgt 2.500.000.\n"
           ]
         }
       ]
