--- a/Langchain-Agent.ipynb
+++ b/Langchain-Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNStA9dzND7eaDOa69QPCa1",
+      "authorship_tag": "ABX9TyPQzQHuVomdy45n5KEHMFNy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,16 +57,29 @@
       "metadata": {
         "id": "K_sEe-A1S56l"
       },
-      "execution_count": null,
+      "execution_count": 116,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 117,
       "metadata": {
-        "id": "afIkZ1hD4RYB"
+        "id": "afIkZ1hD4RYB",
+        "outputId": "811c4a42-03cc-48a2-d6bc-c9cd9c5977df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The gradio extension is already loaded. To reload it, use:\n",
+            "  %reload_ext gradio\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install langchain langchainhub langchain_experimental google-search-results wikipedia openai gradio -q\n",
         "# !pip install google-search-results wikipedia -q\n",
@@ -119,7 +132,7 @@
       "metadata": {
         "id": "CEhw8Ye15BgC"
       },
-      "execution_count": 28,
+      "execution_count": 118,
       "outputs": []
     },
     {
@@ -249,7 +262,7 @@
       "metadata": {
         "id": "vAzSbqz7_0_U"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -489,7 +502,7 @@
       "metadata": {
         "id": "Xs3oopFVsdXy"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -509,7 +522,7 @@
         "id": "lKxJyc-CskpC",
         "outputId": "18592e81-4e57-48c4-96b8-93bd51bd092d"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -690,7 +703,7 @@
         "id": "Wq3KyyEI-bYO",
         "outputId": "e5019897-4d65-4dd2-f8c0-0953a24e4ebd"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -712,6 +725,18 @@
       "metadata": {
         "id": "dAsubqpZN9i8"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain.schema import BaseMessage\n",
+        "hhh = BaseMessage(type=(\"User\"), content=(\"test\"))"
+      ],
+      "metadata": {
+        "id": "45lfBmP5iAjo"
+      },
+      "execution_count": 122,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -765,10 +790,10 @@
         "    if isinstance(output, AgentFinish):\n",
         "        final_result = output.return_values[\"output\"]\n",
         "        # hier der Fehler? variable chat_history should be a list of base messages\n",
-        "        msg = {\"role\": \"user\", \"content\": myprompt}\n",
-        "        chat_history.append(msg)\n",
-        "        msg = {\"role\": \"assistant\", \"content\": output.return_values[\"output\"]}\n",
-        "        chat_history.append(msg)\n",
+        "        #msg = {\"role\": \"user\", \"content\": myprompt}\n",
+        "        chat_history.append(BaseMessage(type=(\"User\"), content=(myprompt)))\n",
+        "        #msg = {\"role\": \"assistant\", \"content\": output.return_values[\"output\"]}\n",
+        "        chat_history.append(BaseMessage(type=(\"assistant\"), content=(output.return_values[\"output\"])))\n",
         "        break\n",
         "    else:\n",
         "        print(output.tool, output.tool_input)\n",
@@ -790,7 +815,7 @@
           "height": 385
         }
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
